--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="index.html " target="_blank">მთავარი</a>
           </li>
           <li class="nav_li">
-            <a href="news.html" target="_blank">სიხლეები</a>
+            <a href="news.html" target="_blank">სიახლეები</a>
           </li>
           <li class="nav_li">
             <a href="contact.html" target="_blank">კონტაქტი</a>
@@ -37,7 +37,7 @@
     <main>
       <section>
         <div>
-          <img src="" alt="" />
+          <img src="images/grapes.webp" alt="grapes" />
         </div>
       </section>
     </main>
